--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,21 @@ body {
     background-color: #696969;
 }
 
+h3 {
+    font-family: 'Monda', sans-serif;
+}
+
+.subtitle > h3 {
+    margin-bottom: -8px;
+    color: #999;
+}
+
+.subtitle {
+    margin-left: 40px;
+    margin-bottom: 40px;
+    border-bottom: 2px solid #eee;
+}
+
 .container > hr {
     margin: 0;
 }
@@ -47,6 +62,10 @@ body {
 
 .content > p {
     margin: 10px 60px 10px 60px;
+}
+
+.reviews {
+    margin-bottom: 40px;
 }
 
 .footer {
