--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ h3 {
     -webkit-box-shadow: 0 0 10px 7px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0 0 10px 7px rgba(0, 0, 0, 0.15);
 
-    margin: 20px 30px 20px 30px;
+    margin: 20px 20px 20px 20px;
     padding: 20px;
     -moz-border-radius: 10px;
     border-radius: 10px;
@@ -101,7 +101,7 @@ h3 {
 }
 
 .product-image {
-    margin-bottom: 20px;
+    margin-bottom: -5px;
     text-align: center;
 }
 
@@ -123,4 +123,8 @@ h3 {
 
 .lead {
     font-size: 16px;
+}
+
+.thumbnails > li {
+    margin-bottom: 10px;
 }
